add a go back button

--- a/got.html
+++ b/got.html
@@ -18,5 +18,6 @@
         Here an enigmatic band of warriors bear swords of no human metal; a tribe of fierce wildlings carry men off into madness; a cruel young dragon prince barters his sister to win back his throne; and a determined woman undertakes the most treacherous of journeys. Amid plots and counterplots, tragedy and betrayal, victory and terror, the fate of the Starks, their allies, and their enemies hangs perilously in the balance, as each endeavors to win that deadliest of conflicts: the game of thrones.
         --back cover
     </p>
+    <a class="go-back" href="index.html">Go Back</a>
 </body>
 </html>
