--- a/hiredGirl.html
+++ b/hiredGirl.html
@@ -14,5 +14,7 @@
         
         Inspired by her grandmother’s journal, Newbery Medalist Laura Amy Schlitz brings her sharp wit and keen eye to early twentieth-century America in a comedic tour de force destined to become a modern classic. Joan’s journey from the muck of the chicken coop to the comforts of a society household in Baltimore (Electricity! Carpet sweepers! Sending out the laundry!) takes its reader on an exploration of feminism and housework, religion and literature, love and loyalty, cats, hats, bunions, and burns.
         </p>
+        <a class="go-back" href="index.html">Go Back</a>
+
 </body>
 </html>
