--- a/rich.html
+++ b/rich.html
@@ -20,5 +20,7 @@
         Overall, "Rich Dad Poor Dad" can be a valuable read for individuals looking to gain a basic understanding of personal finance and investing. However, it should be supplemented with additional resources and a critical evaluation of the advice presented.
         
         </p>
+        <a class="go-back" href="index.html">Go Back</a>
+
 </body>
 </html>
