--- a/mystery.html
+++ b/mystery.html
@@ -9,5 +9,7 @@
 <body>
     <div><p class="book-title-details">The Mystery of the Burnt Cottage</p></div>
     <div><p class="book-details">Fatty, Larry, Daisy, Pep, Bets and Buster the dog turn detectives when a mysterious fire destroys a thatched cottage in Mr. Hick's garden in their village. Calling themselves the "Five Find-Outers and Dog" they set out to solve the mystery and discover the culprit. The final solution, however, surprises the Five Find-Outers almost as much as it surprises Mr. Goon, the village policeman.</p></div>
+    <a class="go-back" href="index.html">Go Back</a>
+
 </body>
 </html>
